// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tables Table render 1`] = `
<table
  class="sk-w-full sk-border-collapse sk-table-fixed"
>
  <thead
    class="sk-bt-2 sk-bb-2 sk-border-t sk-border-b sk-border-grey-light sk-bg-grey-lightest sk-text-navy-lighter sk-text-xxs sk-uppercase"
  >
    <tr
      class="sk-h-10 sk-text-left"
    >
      <th
        class="sk-px-5 sk-font-medium"
        data-sk-name="th-resource"
        style="width:300px;min-width:120px;position:sticky"
      >
        <div
          class="sked-infowindow__trigger sk-truncate"
          data-sk-name="sked-infowindow-trigger"
        >
          <div
            class="sk-truncate"
            data-sk-name="children-container"
          >
            Resource
          </div>
        </div>
      </th>
      <th
        class="sk-px-5 sk-font-medium"
        data-sk-name="th-tags"
        style="width:undefinedpx;min-width:120px;position:sticky"
      >
        <div
          class="sked-infowindow__trigger sk-truncate"
          data-sk-name="sked-infowindow-trigger"
        >
          <div
            class="sk-truncate"
            data-sk-name="children-container"
          >
            Tags
          </div>
        </div>
      </th>
      <th
        class="sk-px-5 sk-font-medium"
        data-sk-name="th-region"
        style="width:undefinedpx;min-width:120px;position:sticky"
      >
        <div
          class="sked-infowindow__trigger sk-truncate"
          data-sk-name="sked-infowindow-trigger"
        >
          <div
            class="sk-truncate"
            data-sk-name="children-container"
          >
            Region
          </div>
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="sk-border-b sk-border-grey-lighter"
    >
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        Elliot Alderson
      </td>
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        Hacking, IT Security, Irony, A bit ... disrupted
      </td>
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        New York City
      </td>
    </tr>
    <tr
      class="sk-border-b sk-border-grey-lighter"
    >
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        Darlene Alderson
      </td>
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        Hacking, Connections
      </td>
      <td
        class="sk-py-3 sk-px-5 sk-text-xs"
      >
        New York City
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Tables TableBody render 1`] = `
<tbody>
  <tr
    class="sk-border-b sk-border-grey-lighter"
  >
    <td
      class="sk-py-3 sk-px-5 sk-text-xs"
    >
      Cell content
    </td>
  </tr>
</tbody>
`;

exports[`Tables TableCell render 1`] = `
<td
  class="sk-py-3 sk-px-5 sk-text-xs"
>
  Cell content
</td>
`;

exports[`Tables TableHead render 1`] = `
<thead
  class="sk-bt-2 sk-bb-2 sk-border-t sk-border-b sk-border-grey-light sk-bg-grey-lightest sk-text-navy-lighter sk-text-xxs sk-uppercase"
>
  <tr
    class="sk-h-10 sk-text-left"
  >
    <th
      class="sk-px-5 sk-font-medium"
      data-sk-name="th-resource"
      style="width:300px;min-width:120px;position:sticky"
    >
      <div
        class="sked-infowindow__trigger sk-truncate"
        data-sk-name="sked-infowindow-trigger"
      >
        <div
          class="sk-truncate"
          data-sk-name="children-container"
        >
          Resource
        </div>
      </div>
    </th>
    <th
      class="sk-px-5 sk-font-medium"
      data-sk-name="th-tags"
      style="width:undefinedpx;min-width:120px;position:sticky"
    >
      <div
        class="sked-infowindow__trigger sk-truncate"
        data-sk-name="sked-infowindow-trigger"
      >
        <div
          class="sk-truncate"
          data-sk-name="children-container"
        >
          Tags
        </div>
      </div>
    </th>
    <th
      class="sk-px-5 sk-font-medium"
      data-sk-name="th-region"
      style="width:undefinedpx;min-width:120px;position:sticky"
    >
      <div
        class="sked-infowindow__trigger sk-truncate"
        data-sk-name="sked-infowindow-trigger"
      >
        <div
          class="sk-truncate"
          data-sk-name="children-container"
        >
          Region
        </div>
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Tables TableRow render 1`] = `
<tr
  class="sk-border-b sk-border-grey-lighter"
>
  <td
    class="sk-py-3 sk-px-5 sk-text-xs"
  >
    Cell content
  </td>
</tr>
`;
